# qt-apps

./: .pre-commit-config.yaml  README.md  game.py  main.py  pyproject.toml  setup.cfg  setup.sh  tutorial_pf.py
app/: constants.py  main_window.py  utilities.py
app/games/: tictactoe.py
app/themes/: testing.qss  themes.py
apps/: game_factory.py  tictactoe.py
tests/: common.py  test_utilities.py
tutorials/: tutorial_pf.py  tutorial_pf_utils.py
