[tool.poetry]
name = "qt-apps"
version = "0.1.0"
description = "A QT6 Application that contains who knows what."
authors = ["Gurashish Singh <gurashigh1singh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.2.3"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
lizard = "^1.17.9"
flake8 = "^4.0.1"
pycodestyle = "^2.8.0"

[tool.isort]
multi_line_output = 5
line_length = 85
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true
atomic = true
src_paths = ["isort", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
