[tool.poetry]
name = "qt-apps"
version = "0.1.0"
description = "Playing around with QT6."
authors = ["Gurashish Singh <gurashigh1singh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.3.1"

[tool.poetry.dev-dependencies]
lizard = "^1.17.9"
flake8 = "^4.0.1"
pycodestyle = "^2.8.0"
pytest = "^7.1.1"
parameterized = "^0.8.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"
black = "^22.8.0"

[tool.black]
line-length = 100

[tool.isort]
force_grid_wrap = 2
# No idea why this module is not being considered as local by isort
known_local_folder = ["tutorial_pf_utils"]
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
quiet = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
